Cambios bien frescos

--- a/ASP/Jomial_Proiektua/Jomial_Final/Jomial_Final.csproj
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Jomial_Final.csproj
@@ -161,6 +161,7 @@
     <Content Include="Content\styles.css" />
     <Content Include="Global.asax" />
     <Content Include="Imagenes\About\alvaro.jpeg" />
+    <Content Include="Imagenes\About\pei.jpg" />
     <Content Include="Imagenes\About\fondoa.png" />
     <Content Include="Imagenes\About\mikel.jpeg" />
     <Content Include="Imagenes\About\oier.jpeg" />
@@ -307,16 +308,19 @@
     <Content Include="Imagenes\FotosOpinion\sevilla.jpg" />
     <Content Include="Imagenes\FotosOpinion\valencia.jpg" />
     <Content Include="Imagenes\guadalajara.jpg" />
-    <Content Include="Imagenes\house.jpg" />
+    <Content Include="Imagenes\house.jpeg" />
     <Content Include="Imagenes\iconfinder_star_326703 %281%29.png" />
+    <Content Include="Imagenes\icoWarning.png" />
     <Content Include="Imagenes\leon.jpg" />
     <Content Include="Imagenes\logo.png" />
     <Content Include="Imagenes\logo_transparent.png" />
     <Content Include="Imagenes\logo_transparentApng.png" />
     <Content Include="Imagenes\madrid.jpg" />
+    <Content Include="Imagenes\icoNight.png" />
     <Content Include="Imagenes\segovia.jpg" />
     <Content Include="Imagenes\sevilla.jpg" />
     <Content Include="Imagenes\valladolid.jpg" />
+    <Content Include="Imagenes\icoLight.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
